# intercept-database

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
addons/: config.yaml
addons/main/: config.cpp
docs/: conf.py  index.rst
docs/api/: build-queries.rst  connection.rst  errors.rst  exec-queries.rst  future.rst  misc.rst  results.rst
docs/intro/: config-file.rst  getting-started.rst
ittnotify/: ittnotify.h  libittnotify.lib
src/: CMakeLists.txt  config.cpp  config.h  connection.cpp  connection.h  logger.cpp  logger.h  main.cpp  query.cpp  query.h  res.cpp  res.h  result.cpp  result.h  threading.cpp  threading.h
